--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "dependencies": {
     "@rails/webpacker": "5.2.1",
     "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.5",
     "vue-router": "^3.4.9",
